tests/expectations/compiler/function/self_recursive_cycle_fail.out
DCE_ENABLED:
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:15:20
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:15:35
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:7:20
     |
   7 |             return fib(n - 1u8) + fib(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:7:35
     |
   7 |             return fib(n - 1u8) + fib(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `foo` --> `foo`

DCE_DISABLED:
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:15:20
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:15:35
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:7:20
     |
   7 |             return fib(n - 1u8) + fib(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:7:35
     |
   7 |             return fib(n - 1u8) + fib(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `foo` --> `foo`
